# ss_jModel_Desktop

./: .gitignore  README.md  config_poetry.md  error_with_opencv.md  pyproject.toml  script_model.py
jmodel_desktop/src/: main.py
jmodel_desktop/src/controllers/: run_model_controller.py  video_inference_controller.py
jmodel_desktop/src/resources/: views.py  views.qrc  views_rc.py
jmodel_desktop/src/service/: devices.py  models.py
jmodel_desktop/src/ui/: main_window.py  pages.py  theme.py
jmodel_desktop/src/ui/video/: camara_page.py  devices.py  run_model_page.py
jmodel_desktop/src/utils/: load_windows.py
jmodel_desktop/src/video_model/: run_pyside_gstreamer.py  run_pyside_opencv.py  run_pyside_predict_source0.py
jmodel_desktop/src/views/: run_model_window.ui  video_inference_window.ui
